// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/channel_filter should match snapshot 1`] = `
<div>
  <div
    class="SidebarFilters"
  >
    <a
      aria-label="unreads filter"
      class="SidebarFilters_filterButton"
      data-testid="sidebar-unread-filter-button"
      href="#"
    >
      <i
        class="icon icon-filter-variant"
      />
    </a>
  </div>
</div>
`;

exports[`components/sidebar/channel_filter should match snapshot if the unread filter is enabled 1`] = `
<div>
  <div
    class="SidebarFilters"
  >
    <a
      aria-label="unreads filter"
      class="SidebarFilters_filterButton active"
      data-testid="sidebar-unread-filter-button"
      href="#"
    >
      <i
        class="icon icon-filter-variant"
      />
    </a>
  </div>
</div>
`;
